--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -34,7 +34,8 @@
 {% endblock %}
 
 {% block content %}
-    <!-- Start News Details Area -->
+    <div class="container">
+        <!-- Start News Details Area -->
         <section class="news-details-area ptb-50">
             <div class="container">
                 <div class="row">
@@ -181,4 +182,5 @@
             </div>
         </section>
         <!-- Start News Details Area -->
+    </div>
 {% endblock content %}
