--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -36,7 +36,7 @@
 {% block content %}
     <div class="container">
         <!-- Start News Details Area -->
-        <section class="news-details-area ptb-50">
+        <section class="news-details-area">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 col-md-12">
@@ -130,17 +130,6 @@
 
                     <div class="col-lg-4">
                         <aside class="widget-area">
-                            <div class="widget widget_search">
-                                <form class="search-form">
-                                    <label>
-                                        <span class="screen-reader-text">Search for:</span>
-                                        <input type="search" class="search-field" placeholder="Search...">
-                                    </label>
-                                    <button type="submit">
-                                        <i class='bx bx-search'></i>
-                                    </button>
-                                </form>
-                            </div>
 
                             <section class="widget widget_latest_news_thumb">
                                 <h3 class="widget-title">Izindi wasoma</h3>
