--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -129,7 +129,7 @@
                     </div>
 
                     <div class="col-lg-4">
-                        <aside class="widget-area">
+                        <aside class="widget-area" style="margin-top: 80px;">
 
                             <section class="widget widget_latest_news_thumb">
                                 <h3 class="widget-title">Izindi wasoma</h3>
@@ -151,7 +151,7 @@
                             <section class="widget widget_popular_posts_thumb">
                                 <h3 class="widget-title">Facebook Page</h3>
                                 <iframe loading="lazy" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fbyosehano%2F&tabs=pages&width=340&height=213&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-                                width="340" height="300" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+                                width="340" height="200" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
                                 allowTransparency="true" allow="encrypted-media"></iframe>
                             </section>
 
