--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -137,7 +137,7 @@
                                 {% for post in similar_posts %}
                                     <article class="item">
                                         <a href="#" class="thumb">
-                                            <span class="fullimage cover" style="background: url("{{ post.thumbnail.url }}")" role="img"></span>
+                                            <img src="{{ post.thumbnail.url }}" style="width: 100%;object-fit: cover;" loading="lazy" role="img"/>
                                         </a>
                                         <div class="info">
                                             <h4 class="title usmall"><a href="#">{{ post.title }}</a></h4>
