--- a/templates/article_category.html
+++ b/templates/article_category.html
@@ -24,10 +24,10 @@
         <div class="page-title-area">
             <div class="container">
                 <div class="page-title-content">
-                    <h2>News without sidebar</h2>
+                    <h2>{{ menu_title }}</h2>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li>News without sidebar</li>
+                        <li>{{ menu_title }}</li>
                     </ul>
                 </div>
             </div>
