--- a/templates/article_category.html
+++ b/templates/article_category.html
@@ -18,6 +18,9 @@
 <meta property="twitter:title" content="{{ menu_title|title }}">
 {% endblock metadatas %}
 
+{% block loading_text %}
+    <span>{{ menu_title }}</span>
+{% endblock %}
 
 {% block content %}
     <!-- Start Page Banner -->
