--- a/templates/index.html
+++ b/templates/index.html
@@ -51,4 +51,75 @@
             </div>
         </section>
         <!-- End Main Default  News Area -->
+
+    <!-- Start Default News Area -->
+        <section class="default-news-area">
+            <div class="container">
+                <div class="most-popular-news">
+                    <div class="section-title">
+                        <h2>Izakunzwe</h2>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-lg-8">
+                            <div class="row">
+                                {% for post in popular_news|slice:":2" %}
+                                    <div class="col-lg-6">
+                                    <div class="single-most-popular-news">
+                                        <div class="popular-news-image">
+                                            <a href="{{ post.get_absolute_url }}">
+                                                <img src="{{ post.thumbnail.url }}" loading="lazy" title="{{ post.title }}" alt="{{ post.title }}">
+                                            </a>
+                                        </div>
+
+                                        <div class="popular-news-content">
+                                            <span>{{ post.category.name }}</span>
+                                            <h3>
+                                                <a href="{{ post.get_absolute_url }}">{{ post.title|title }}</a>
+                                            </h3>
+                                            <p><a href="#">{{ post.author.username }}</a> / {{ post.publish|naturalday }}</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                {% endfor %}
+
+                            </div>
+                        </div>
+
+
+
+                        <div class="col-lg-4">
+                            {% for foo in popular_news|slice:":4" %}
+                                {% if forloop.counter > 2 %}
+                                   <div class="most-popular-post">
+                                        <div class="row align-items-center">
+                                            <div class="col-lg-4 col-sm-4">
+                                                <div class="post-image">
+                                                    <a href="{{ post.get_absolute_url }}">
+                                                        <img src="{{ post.thumbnail.url }}" title="{{ post.title }}" alt="{{ post.title }}">
+                                                    </a>
+                                                </div>
+                                            </div>
+
+                                            <div class="col-lg-8 col-sm-8">
+                                                <div class="post-content">
+                                                    <span>{{ post.category.name }}</span>
+                                                    <h3>
+                                                        <a href="{{ post.get_absolute_url }}">{{ post.title|title }}</a>
+                                                    </h3>
+                                                    <p>{{ post.publish|naturalday }}</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                {% endif %}
+                            {% endfor %}
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <!-- End Default News Area -->
 {% endblock content %}
