--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -42,7 +42,7 @@
                         <div class="blog-details-desc">
 
                             <div class="article-content">
-                                <h3>{{ post.title|title }}</h3>
+                                <h3 style="text-align: center;">{{ post.title|title }}</h3>
                                 <div class="article-image">
                                     <img src="{{ post.thumbnail.url }}" loading="lazy" style="width: 100%;" alt="{{ post.title }}">
                                 </div>
