--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -26,7 +26,7 @@
 {% endblock metadatas %}
 
 {% block dij %}
-<script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5f06beeccc9fba0019cdd26e&product=sop' async='async'></script>
+<script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=5fc64d2aad82460011c4da93&product=inline-share-buttons" async="async"></script>
 {% endblock dij %}
 
 {% block loading_text %}
@@ -76,22 +76,7 @@
                             <div class="article-footer">
                                 <div class="article-share">
                                     <ul class="social">
-                                        <li><span>Share:</span></li>
-                                        <li>
-                                            <a href="#" target="_blank">
-                                                <i class='bx bxl-facebook'></i>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#" target="_blank">
-                                                <i class='bx bxl-twitter'></i>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#" target="_blank">
-                                                <i class='bx bxl-instagram'></i>
-                                            </a>
-                                        </li>
+                                        <div class="sharethis-inline-share-buttons"></div>
                                     </ul>
                                 </div>
                             </div>
