--- a/templates/article_detail_.html
+++ b/templates/article_detail_.html
@@ -26,7 +26,7 @@
 {% endblock metadatas %}
 
 {% block dij %}
-<script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5f06beeccc9fba0019cdd26e&product=sop' async='async'></script>
+<script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=5fc64d2aad82460011c4da93&product=inline-share-buttons" async="async"></script>
 {% endblock dij %}
 
 {% block content %}
