--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -154,7 +154,7 @@
                             <section class="widget widget_latest_news_thumb">
                                 <h3 class="widget-title">Advertising</h3>
 
-                                <iframe src="//iframe.dacast.com/b/148060/c/571022" width="100%%" frameborder="0" scrolling="no" allow="autoplay" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+                                <iframe src="//iframe.dacast.com/b/148060/c/571022" width="100%%" height="350" frameborder="0" scrolling="no" allow="autoplay" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 
                             </section>
 
