--- a/templates/layout.html
+++ b/templates/layout.html
@@ -72,7 +72,7 @@
         
 
             <!-- Start Preloader -->
-        <div class="preloader">
+        <!--<div class="preloader">
             <div class="loader">
                 <div class="wrapper">
                     <div class="circle circle-1"></div>
@@ -80,11 +80,11 @@
                     <div class="circle circle-2"></div>
                     <div class="circle circle-3"></div>
                 </div>
-                {% block loading_text %}
+                {% block loading_text_ %}
                     <span>Tegereza Gato...</span>
                 {% endblock %}
             </div>
-        </div>
+        </div>-->
         <!-- End Preloader -->
 
 
