--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -61,7 +61,7 @@
                                   </script>
                                     {{ post.body|safe }}
 
-                                    <a href='{{ post.category.get_absolute_url }}' class='btn btn-primary btn-md'>Inkuru z'{{ post.category.name}}</a>
+                                    <a href='{{ post.category.get_absolute_url }}' class='btn btn-primary btn-lg'>Soma izindi nkuru z'{{ post.category.name}}</a>
 
                                     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                                       <ins class="adsbygoogle"
