--- a/templates/layout.html
+++ b/templates/layout.html
@@ -284,6 +284,8 @@
         <script src="{% static 'assets/js/wow.min.js' %}"></script>
         <!-- Custom JS -->
         <script src="{% static 'assets/js/main.js' %}"></script>
+        {% block dij %}
+        {% endblock dij %}
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script>
             window.dataLayer = window.dataLayer || [];
