--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -35,8 +35,8 @@
     "img": "https://byosehano.com{{ post.thumbnail.url }}",
     "tags": "!!! UP TO 3 TAGS SEPARATED BY COMMA !!!",
     "url": "https://byosehano.com",
-    "title": "string",
-    "author": "string",
+    "title": "{{ post.title }}",
+    "author": "{{ post.author.username }}",
     "language": "en",
     "recommendedArticles": false,
     "globalRecommendations": false,
